fix partners not showing

--- a/packages/view/stats-widget-browser.html
+++ b/packages/view/stats-widget-browser.html
@@ -2638,7 +2638,7 @@ main {
     </script>
     <script>
       const chartParameters = {};
-      const data = {"version":1,"tree":{"name":"index.min.js","children":[{"name":"package.json","uid":"77e9-0"},{"name":"src","children":[{"name":"widget.js","uid":"77e9-1"}]}]},"nodes":{"77e9-0":{"renderedLength":56,"gzipLength":1065,"id":"package.json"},"77e9-1":{"renderedLength":536,"isEntry":true,"gzipLength":350,"id":"src/widget.js"},"77e9-2":{"renderedLength":0,"isExternal":true,"gzipLength":0,"id":"@scbd/self-embedding-component"}},"links":[{"source":"77e9-1","target":"77e9-2"},{"source":"77e9-1","target":"77e9-0"}],"env":{"rollup":"2.22.1","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":true,"brotli":false}};
+      const data = {"version":1,"tree":{"name":"index.min.js","children":[{"name":"package.json","uid":"beb4-0"},{"name":"src","children":[{"name":"widget.js","uid":"beb4-1"}]}]},"nodes":{"beb4-0":{"renderedLength":57,"gzipLength":1066,"id":"package.json"},"beb4-1":{"renderedLength":536,"isEntry":true,"gzipLength":350,"id":"src/widget.js"},"beb4-2":{"renderedLength":0,"isExternal":true,"gzipLength":0,"id":"@scbd/self-embedding-component"}},"links":[{"source":"beb4-1","target":"beb4-2"},{"source":"beb4-1","target":"beb4-0"}],"env":{"rollup":"2.22.1","rollup-plugin-visualizer":"4.0.4"},"options":{"gzip":true,"brotli":false}};
 
       document.addEventListener('DOMContentLoaded', () => {
         const width = chartParameters.width || window.innerWidth;
