Update Row Design
Issues to resolve: 1. Auto-resize actor logo to fit inside header  2. Error retrieving image name for actor logo for 'alt' in img tag

--- a/packages/search/scripts/index.css
+++ b/packages/search/scripts/index.css
@@ -369,13 +369,14 @@ a > #aa-search code {
   color: white;
   border-radius: 0.25rem;
   background-color: #24aa44;
-  margin-right: 5px;
-  padding-right: 5px;
+  margin-right: 0.5rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
   display: inline-flex;
 }
 
 #aa-search .action-categories-name {
-  font-size: large;
+  font-size: larger;
   font-weight: bold;
   text-transform: capitalize;
 }
