Fixed Rendering Sort Selection to webpage
 Issue to fix: When sorting by 'date created', does not display all actions dating  from the beginning, displays only a couple months back

--- a/packages/search/scripts/index.css
+++ b/packages/search/scripts/index.css
@@ -323,11 +323,14 @@ a > #aa-search code {
   align-items: center;
   justify-content: space-between;
 }
-#aa-search .sort-list {
+#aa-search .sort-list-container {
   text-align: right;
   padding-bottom: 0.5rem;
 }
-
+#aa-search .sort-list {
+  background-color: #dfe9e0;
+  font-weight: bold;
+}
 #aa-search .card {
   position: relative;
   display: flex;
